@@ -1,25 +1,36 @@
 package it.pagopa.selfcare.dashboard.connector.rest;
 
+import it.pagopa.selfcare.commons.base.security.Authority;
 import it.pagopa.selfcare.commons.utils.TestUtils;
 import it.pagopa.selfcare.dashboard.connector.model.auth.AuthInfo;
+import it.pagopa.selfcare.dashboard.connector.model.auth.ProductRole;
 import it.pagopa.selfcare.dashboard.connector.model.institution.InstitutionInfo;
 import it.pagopa.selfcare.dashboard.connector.rest.client.PartyProcessRestClient;
-import it.pagopa.selfcare.dashboard.connector.rest.model.onboarding.OnBoardingInfo;
-import it.pagopa.selfcare.dashboard.connector.rest.model.onboarding.OnboardingData;
+import it.pagopa.selfcare.dashboard.connector.rest.model.*;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Collections;
+import java.util.EnumMap;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 @ExtendWith(MockitoExtension.class)
 class PartyConnectorImplTest {
+
+    private static final EnumMap<PartyRole, Authority> PARTY_ROLE_AUTHORITY_MAP = new EnumMap<>(PartyRole.class) {{
+        put(PartyRole.MANAGER, Authority.ADMIN);
+        put(PartyRole.DELEGATE, Authority.ADMIN);
+        put(PartyRole.SUB_DELEGATE, Authority.ADMIN);
+        put(PartyRole.OPERATOR, Authority.LIMITED);
+    }};
 
     @InjectMocks
     private PartyConnectorImpl partyConnector;
@@ -43,7 +54,23 @@ class PartyConnectorImplTest {
 
 
     @Test
-    void getInstitutionInfo_emptyInstitutionInfos() {
+    void getInstitutionInfo_nullInstitutions() {
+        // given
+        String institutionId = "institutionId";
+        OnBoardingInfo onBoardingInfo = new OnBoardingInfo();
+        Mockito.when(restClientMock.getOnBoardingInfo(Mockito.any()))
+                .thenReturn(onBoardingInfo);
+        // when
+        InstitutionInfo institutionInfo = partyConnector.getInstitutionInfo(institutionId);
+        // then
+        assertNull(institutionInfo);
+        Mockito.verify(restClientMock, Mockito.times(1))
+                .getOnBoardingInfo(Mockito.eq(institutionId));
+        Mockito.verifyNoMoreInteractions(restClientMock);
+    }
+
+    @Test
+    void getInstitutionInfo_emptyInstitutions() {
         // given
         String institutionId = "institutionId";
         OnBoardingInfo onBoardingInfo = new OnBoardingInfo();
@@ -61,7 +88,7 @@ class PartyConnectorImplTest {
 
 
     @Test
-    void getInstitutionInfo_nullInstitutionProduct() {
+    void getInstitutionInfo_nullAttributes() {
         // given
         String institutionId = "institutionId";
         OnBoardingInfo onBoardingInfo = new OnBoardingInfo();
@@ -73,8 +100,28 @@ class PartyConnectorImplTest {
         InstitutionInfo institutionInfo = partyConnector.getInstitutionInfo(institutionId);
         // then
         assertNotNull(institutionInfo);
-        assertNotNull(institutionInfo.getActiveProducts());
-        assertTrue(institutionInfo.getActiveProducts().isEmpty());
+        assertNull(institutionInfo.getCategory());
+        Mockito.verify(restClientMock, Mockito.times(1))
+                .getOnBoardingInfo(Mockito.eq(institutionId));
+        Mockito.verifyNoMoreInteractions(restClientMock);
+    }
+
+
+    @Test
+    void getInstitutionInfo_emptyAttributes() {
+        // given
+        String institutionId = "institutionId";
+        OnBoardingInfo onBoardingInfo = new OnBoardingInfo();
+        OnboardingData onboardingData = TestUtils.mockInstance(new OnboardingData());
+        onboardingData.setAttributes(Collections.emptyList());
+        onBoardingInfo.setInstitutions(Collections.singletonList(onboardingData));
+        Mockito.when(restClientMock.getOnBoardingInfo(Mockito.any()))
+                .thenReturn(onBoardingInfo);
+        // when
+        InstitutionInfo institutionInfo = partyConnector.getInstitutionInfo(institutionId);
+        // then
+        assertNotNull(institutionInfo);
+        assertNull(institutionInfo.getCategory());
         Mockito.verify(restClientMock, Mockito.times(1))
                 .getOnBoardingInfo(Mockito.eq(institutionId));
         Mockito.verifyNoMoreInteractions(restClientMock);
@@ -87,7 +134,7 @@ class PartyConnectorImplTest {
         String institutionId = "institutionId";
         OnBoardingInfo onBoardingInfo = new OnBoardingInfo();
         OnboardingData onboardingData = TestUtils.mockInstance(new OnboardingData());
-        onboardingData.setInstitutionProducts(List.of("prod_1"));
+        onboardingData.setAttributes(List.of(TestUtils.mockInstance(new Attribute())));
         onBoardingInfo.setInstitutions(Collections.singletonList(onboardingData));
         Mockito.when(restClientMock.getOnBoardingInfo(Mockito.any()))
                 .thenReturn(onBoardingInfo);
@@ -99,10 +146,80 @@ class PartyConnectorImplTest {
         assertEquals(onboardingData.getDigitalAddress(), institutionInfo.getDigitalAddress());
         assertEquals(onboardingData.getInstitutionId(), institutionInfo.getInstitutionId());
         assertEquals(onboardingData.getState().toString(), institutionInfo.getStatus());
-        assertNotNull(institutionInfo.getActiveProducts());
-        assertIterableEquals(onboardingData.getInstitutionProducts(), institutionInfo.getActiveProducts());
+        assertEquals(onboardingData.getAttributes().get(0).getDescription(), institutionInfo.getCategory());
         Mockito.verify(restClientMock, Mockito.times(1))
                 .getOnBoardingInfo(Mockito.eq(institutionId));
+        Mockito.verifyNoMoreInteractions(restClientMock);
+    }
+
+
+    @Test
+    void getInstitutionProducts_nullProducts() {
+        // given
+        String institutionId = "institutionId";
+        // when
+        List<String> institutionProducts = partyConnector.getInstitutionProducts(institutionId);
+        // then
+        assertNotNull(institutionProducts);
+        assertTrue(institutionProducts.isEmpty());
+        Mockito.verify(restClientMock, Mockito.times(1))
+                .getInstitutionProducts(Mockito.eq(institutionId));
+        Mockito.verifyNoMoreInteractions(restClientMock);
+    }
+
+
+    @Test
+    void getInstitutionProducts_nullProductsInfo() {
+        // given
+        String institutionId = "institutionId";
+        Mockito.when(restClientMock.getInstitutionProducts(Mockito.any()))
+                .thenReturn(new Products());
+        // when
+        List<String> institutionProducts = partyConnector.getInstitutionProducts(institutionId);
+        // then
+        assertNotNull(institutionProducts);
+        assertTrue(institutionProducts.isEmpty());
+        Mockito.verify(restClientMock, Mockito.times(1))
+                .getInstitutionProducts(Mockito.eq(institutionId));
+        Mockito.verifyNoMoreInteractions(restClientMock);
+    }
+
+
+    @Test
+    void getInstitutionProducts_emptyProductsInfo() {
+        // given
+        String institutionId = "institutionId";
+        Products products = new Products();
+        products.setProducts(Collections.emptyList());
+        Mockito.when(restClientMock.getInstitutionProducts(Mockito.any()))
+                .thenReturn(products);
+        // when
+        List<String> institutionProducts = partyConnector.getInstitutionProducts(institutionId);
+        // then
+        assertNotNull(institutionProducts);
+        assertTrue(institutionProducts.isEmpty());
+        Mockito.verify(restClientMock, Mockito.times(1))
+                .getInstitutionProducts(Mockito.eq(institutionId));
+        Mockito.verifyNoMoreInteractions(restClientMock);
+    }
+
+
+    @Test
+    void getInstitutionProducts_notEmptyProductsInfo() {
+        // given
+        String institutionId = "institutionId";
+        Products products = new Products();
+        products.setProducts(List.of(TestUtils.mockInstance(new ProductInfo())));
+        Mockito.when(restClientMock.getInstitutionProducts(Mockito.any()))
+                .thenReturn(products);
+        // when
+        List<String> institutionProducts = partyConnector.getInstitutionProducts(institutionId);
+        // then
+        assertNotNull(institutionProducts);
+        assertFalse(institutionProducts.isEmpty());
+        assertEquals(products.getProducts().get(0).getId(), institutionProducts.get(0));
+        Mockito.verify(restClientMock, Mockito.times(1))
+                .getInstitutionProducts(Mockito.eq(institutionId));
         Mockito.verifyNoMoreInteractions(restClientMock);
     }
 
@@ -122,11 +239,10 @@ class PartyConnectorImplTest {
 
 
     @Test
-    void getAuthInfo_emptyInstitutionInfos() {
+    void getAuthInfo_nullInstitutions() {
         // given
         String institutionId = "institutionId";
         OnBoardingInfo onBoardingInfo = new OnBoardingInfo();
-        onBoardingInfo.setInstitutions(Collections.emptyList());
         Mockito.when(restClientMock.getOnBoardingInfo(Mockito.any()))
                 .thenReturn(onBoardingInfo);
         // when
@@ -140,19 +256,63 @@ class PartyConnectorImplTest {
 
 
     @Test
-    void getAuthInfo_nullRelationshipProducts() {
+    void getAuthInfo_emptyInstitutions() {
         // given
         String institutionId = "institutionId";
         OnBoardingInfo onBoardingInfo = new OnBoardingInfo();
-        OnboardingData onboardingData = TestUtils.mockInstance(new OnboardingData());
-        onBoardingInfo.setInstitutions(Collections.singletonList(onboardingData));
+        onBoardingInfo.setInstitutions(Collections.emptyList());
         Mockito.when(restClientMock.getOnBoardingInfo(Mockito.any()))
                 .thenReturn(onBoardingInfo);
         // when
         AuthInfo authInfo = partyConnector.getAuthInfo(institutionId);
         // then
         assertNotNull(authInfo);
-        assertNull(authInfo.getProducts());
+        assertNotNull(authInfo.getProductRoles());
+        assertTrue(authInfo.getProductRoles().isEmpty());
+        Mockito.verify(restClientMock, Mockito.times(1))
+                .getOnBoardingInfo(Mockito.eq(institutionId));
+        Mockito.verifyNoMoreInteractions(restClientMock);
+    }
+
+
+    @Test
+    void getAuthInfo_nullProductInfo() {
+        // given
+        String institutionId = "institutionId";
+        OnBoardingInfo onBoardingInfo = new OnBoardingInfo();
+        OnboardingData onboardingData = TestUtils.mockInstance(new OnboardingData(), "setProductInfo");
+        onboardingData.setState(RelationshipState.ACTIVE);
+        onBoardingInfo.setInstitutions(List.of(onboardingData));
+        Mockito.when(restClientMock.getOnBoardingInfo(Mockito.any()))
+                .thenReturn(onBoardingInfo);
+        // when
+        AuthInfo authInfo = partyConnector.getAuthInfo(institutionId);
+        // then
+        assertNotNull(authInfo);
+        assertNotNull(authInfo.getProductRoles());
+        assertTrue(authInfo.getProductRoles().isEmpty());
+        Mockito.verify(restClientMock, Mockito.times(1))
+                .getOnBoardingInfo(Mockito.eq(institutionId));
+        Mockito.verifyNoMoreInteractions(restClientMock);
+    }
+
+
+    @Test
+    void getAuthInfo_notActive() {
+        // given
+        String institutionId = "institutionId";
+        OnBoardingInfo onBoardingInfo = new OnBoardingInfo();
+        OnboardingData onboardingData = TestUtils.mockInstance(new OnboardingData());
+        onboardingData.setState(RelationshipState.PENDING);
+        onBoardingInfo.setInstitutions(List.of(onboardingData));
+        Mockito.when(restClientMock.getOnBoardingInfo(Mockito.any()))
+                .thenReturn(onBoardingInfo);
+        // when
+        AuthInfo authInfo = partyConnector.getAuthInfo(institutionId);
+        // then
+        assertNotNull(authInfo);
+        assertNotNull(authInfo.getProductRoles());
+        assertTrue(authInfo.getProductRoles().isEmpty());
         Mockito.verify(restClientMock, Mockito.times(1))
                 .getOnBoardingInfo(Mockito.eq(institutionId));
         Mockito.verifyNoMoreInteractions(restClientMock);
@@ -164,21 +324,38 @@ class PartyConnectorImplTest {
         // given
         String institutionId = "institutionId";
         OnBoardingInfo onBoardingInfo = new OnBoardingInfo();
-        OnboardingData onboardingData = TestUtils.mockInstance(new OnboardingData());
-        onboardingData.setRelationshipProducts(List.of("prod_1"));
-        onBoardingInfo.setInstitutions(Collections.singletonList(onboardingData));
+        OnboardingData onboardingData1 = TestUtils.mockInstance(new OnboardingData(), 1);
+        onboardingData1.setState(RelationshipState.ACTIVE);
+        OnboardingData onboardingData2 = TestUtils.mockInstance(new OnboardingData(), 2);
+        onboardingData2.setState(RelationshipState.PENDING);
+        OnboardingData onboardingData3 = TestUtils.mockInstance(new OnboardingData(), 3, "setProductInfo");
+        onboardingData3.setState(RelationshipState.ACTIVE);
+        onBoardingInfo.setInstitutions(List.of(onboardingData1, onboardingData2, onboardingData3));
         Mockito.when(restClientMock.getOnBoardingInfo(Mockito.any()))
                 .thenReturn(onBoardingInfo);
         // when
         AuthInfo authInfo = partyConnector.getAuthInfo(institutionId);
         // then
         assertNotNull(authInfo);
-        assertEquals(onboardingData.getProductRole(), authInfo.getRole());
-        assertNotNull(authInfo.getProducts());
-        assertIterableEquals(onboardingData.getRelationshipProducts(), authInfo.getProducts());
+        assertNotNull(authInfo.getProductRoles());
+        assertEquals(1, authInfo.getProductRoles().size());
+        ProductRole productRole = authInfo.getProductRoles().iterator().next();
+        assertEquals(onboardingData1.getProductInfo().getId(), productRole.getProductCode());
+        assertEquals(onboardingData1.getProductInfo().getRole(), productRole.getProductRole());
+        assertEquals(PARTY_ROLE_AUTHORITY_MAP.get(onboardingData1.getRole()), productRole.getSelfCareRole());
         Mockito.verify(restClientMock, Mockito.times(1))
                 .getOnBoardingInfo(Mockito.eq(institutionId));
         Mockito.verifyNoMoreInteractions(restClientMock);
+    }
+
+
+    @ParameterizedTest
+    @EnumSource(value = PartyRole.class)
+    void getAuthInfo(PartyRole partyRole) {
+        // when
+        Authority authority = PartyConnectorImpl.PARTY_2_SELC_ROLE.apply(partyRole);
+        // then
+        assertEquals(PARTY_ROLE_AUTHORITY_MAP.get(partyRole), authority);
     }
 
 }
